frontend alignment resolved

--- a/AI_Chatbot/static/AI_Chatbot/style.css
+++ b/AI_Chatbot/static/AI_Chatbot/style.css
@@ -38,8 +38,20 @@
     padding: 5px;
     font-family: monospace;
     font-size: 14px;
-    border: 3px solid rgb(133, 2, 137);
+    border: 3px solid #850289;
     background-color: #fb91ff;
-    color: white;
+    color: rgb(255, 255, 255);
     border-radius: 10px;
+}
+
+h1{
+    text-align: center;
+}
+.userText{
+    text-align: right;
+    font-family: monospace;
+    font-size: 15px;
+    line-height: 25px;
+    /* color: rgb(109,111,109); */
+    color: #340335;
 }
